--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "create-env": "node create-env-file.js",
     "build": "nuxt build",
-    "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 nuxt dev --dotenv .env --open",
+    "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 nuxt dev --dotenv .env",
     "start": "npm run dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
