--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-NUXT_ENV_AUTH0_DOMAIN=<YOUR-DOMAIN>.auth0.com
+NUXT_ENV_AUTH0_DOMAIN=dev-3crf3f0p.eu.auth0.com
 NUXT_ENV_AUTH0_CLIENT_ID=abcdefgh12345678
 NUXT_ENV_AUTH0_SCOPE=openid profile email offline_access
-NUXT_ENV_AUTH0_AUDIENCE=<AUDIENCE>
+NUXT_ENV_AUTH0_AUDIENCE=https://myapp.com
 NUXT_ENV_AUTH0_CALLBACK_URL=/auth-callback
 NUXT_ENV_BASE_API_URL=https://localhost:44394
