--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NUXT_ENV_AUTH0_DOMAIN=dev-3crf3f0p.eu.auth0.com
+NUXT_ENV_AUTH0_DOMAIN=abcdefgh12345678.auth0.com
 NUXT_ENV_AUTH0_CLIENT_ID=abcdefgh12345678
 NUXT_ENV_AUTH0_SCOPE=openid profile email offline_access
 NUXT_ENV_AUTH0_AUDIENCE=https://myapp.com
